# pequegrad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  a.py  jit.html  loss.html  lossnojit.html  nojit.html  outs.html
csrc/: ad_primitives.cpp  ad_primitives.hpp  binary_ops_kernels.cu  binary_ops_kernels.cuh  binary_ops_macro.cuh  cuda_array.cu  cuda_array.cuh  cuda_array_impl.cuh  cuda_backend.cu  device.cpp  device.hpp  dispatch.hpp  dtype.cpp  dtype.cu  dtype.cuh  dtype.hpp  folding_kernels.cu  folding_kernels.cuh  graph.hpp  init_kernels.cu  init_kernels.cuh  init_primitives.hpp  matmul_kernels.cu  matmul_kernels.cuh  ops.cpp  ops.hpp  pybind_entrypoint.cu  pybind_utils.cpp  pybind_utils.cu  pybind_utils.cuh  pybind_utils.hpp  reduce_ops_kernels.cu  reduce_ops_kernels.cuh  shape.cpp  shape.hpp  slicing.hpp  state.cpp  state.hpp  tensor.cpp  tensor.hpp  (+9 more)
csrc/common/: ad_primitives.cpp  view_helpers.cpp  view_helpers.hpp
csrc/compiler/: common.hpp  compile.hpp  expr.cpp  expr.hpp  fuse.hpp  idk.hpp  ir.cpp  ir.hpp  jit_kernel.hpp  new_ir.hpp  pattern_matcher.hpp  scheduler.cpp  scheduler.hpp  utils.hpp
csrc/cpu/: ad_primitives.cpp  binary.cpp  binary.hpp  binary_helpers.hpp  copy_helpers.cpp  copy_helpers.hpp  folding.cpp  folding.hpp  folding_helpers.cpp  folding_helpers.hpp  init.cpp  init_primitives.cpp  matmul.cpp  matmul.hpp  matmul_helpers.hpp  mem.hpp  other.cpp  reduce.cpp  reduce.hpp  reduce_helpers.hpp  select.cpp  select.hpp  select_helpers.cpp  select_helpers.hpp  ternary.cpp  ternary.hpp  ternary_helpers.hpp  unary.cpp  unary.hpp  unary_helpers.hpp  view_helpers.cpp  view_helpers.hpp
csrc/cpu_tensor/: binary_helpers.hpp  copy.cpp  copy.hpp  cpu_tensor.cpp  cpu_tensor.hpp  matmul.hpp  movement.cpp  reducers.hpp  slice.cpp  ternary_helpers.hpp  unary_vectorized.hpp
csrc/cuda/: ad_primitives.cu  attn.cu  binary.cu  binary.cuh  binary_helpers.cu  binary_helpers.cuh  common.hpp  cuda_utils.cuh  folding.cu  folding.cuh  folding_helpers.cu  folding_helpers.cuh  init.cu  init_primitives.cu  matmul.cu  matmul.cuh  matmul_helpers.cu  matmul_helpers.cuh  mem.cu  mem.hpp  other.cu  random.cuh  reduce.cu  reduce.cuh  reduce_helpers.cu  reduce_helpers.cuh  select.cu  select.cuh  select_helpers.cu  select_helpers.cuh  ternary.cu  ternary.cuh  ternary_helpers.cu  ternary_helpers.cuh  unary.cu  unary.cuh  unary_helpers.cu  unary_helpers.cuh  view_helpers.cu  view_helpers.cuh
csrc/cuda_array/: binary.cu  constructors.cu  cuda_array.cu  cuda_array.cuh  elwise.cu  folding.cu  matmul.cu  movement.cu  reduce.cu  slice.cu  ternary.cu
csrc/cuda_tensor/: binary.cu  constructors.cu  cuda_tensor.cu  cuda_tensor.cuh  cuda_utils.cuh  elwise.cu  folding.cu  matmul.cu  movement.cu  reduce.cu  slice.cu  ternary.cu
csrc/cuda_tensor/kernels/: binary.cu  binary.cuh  dot.cu  dot.cuh  folding.cu  folding.cuh  initialization.cuh  reduce.cu  reduce.cuh  slice.cuh  ternary.cu  ternary.cuh  unary.cu  unary.cuh
csrc/entrypoints/: npybind_utils.cpp  npybind_utils.hpp  pybind_entrypoint.cpp  pybind_entrypoint.cu  tensor_pybind.cpp
csrc/kernels/: all.cuh  binary.cu  dot.cuh  folding.cu  folding.cuh  reduce.cu  reduce.cuh  ternary.cuh  unary.cu  unary.cuh
examples/: alexnet.py  alexnet_func.py  amp_fc.py  amp_matmul.py  autodiff.py  checkpointing.py  control_flow.py  conv_mnist.py  conv_mnist_eval.py  cuda_graph.py  custom_compiler_pattern.py  custom_vjp.py  customprim.py  data_parallel_mlp.py  downsample.py  fft.py  fused_attention.py  gpt2.py  jacobian.py  jax_interpreter.py  jit.py  jit_cel.py  jit_constants.py  jit_hoist_broadcasts.py  jit_lrn.py  jit_pool.py  jit_reduce_with_epilogue.py  lu_factorization.py  mlp_mnist.py  mlp_mnist_funcapi.py  montecarlo_integration.py  new.py  ode.py  onnx_mlp_infer.py  onnx_models.py  quantized_mlp.py  sharded.py  taylor_expansion.py
examples/helper/: train_onnx_mlp.py
pequegrad/: __init__.py  autodiff.py  compile.py  complex.py  context.py  cuda.py  cuda_storage.py  cv2.py  diffeq.py  ds_transforms.py  einsum.py  extend.py  function.py  graph.py  image.py  jax.py  linalg.py  modules.py  nn.py  onnx.py  ops.py  optim.py  signal.py  state.py  storage.py  tensor.py  transforms.py  util.py  utils.py  viz.py
pequegrad/autodiff/: __init__.py  elwise.py  folding.py  function.py  matmul.py  pad.py  reduce.py  shapeops.py  slice.py  unary.py
pequegrad/backend/: __init__.py  c.py  cpu.py  cuda.py  numpy.py  utils.py
pequegrad/data/: dataloader.py  dataset.py
pequegrad/distrib/: __init__.py  sharded_tensor.py
pequegrad/extra/: cifar_100.py  mnist.py
pequegrad/function/: __init__.py  elwise.py  folding.py  function.py  matmul.py  reduce.py  shapeops.py  unary.py
pequegrad/storage/: __init__.py  abstract_storage.py  cuda_storage.py  cuda_storage_dummy.py  numpy_storage.py
pequegrad/transforms/: __init__.py  autodiff.py  automatic_mixed_precision.py  compile.py  distrib.py  extra.py  lazyfn.py  pytree.py  utils.py  vectorize.py
tests/: test_backend.py  test_broadcast_ops.py  test_casting.py  test_compile.py  test_context.py  test_cuda.py  test_custom_prim.py  test_cv2.py  test_device.py  test_high_level_ops.py  test_higher_order_autodiff.py  test_modules.py  test_new.py  test_new_device.py  test_new_ops.py  test_no_cuda_available.py  test_ops.py  test_storage.py  test_tensor.py  test_to.py  test_transforms.py
